ch07/panic-to-result/panic-to-result-usage/tests/fails/function_with_result.stderr
error: this macro can only be applied to a function that does not return a Result. Signature Result < Person, String >
 --> tests/fails/function_with_result.rs:4:1
  |
4 | fn create_person_with_result(name: String, age: i32) -> Result<Person, String> {
  | ^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/fails/function_with_result.rs:10:2
   |
10 | }
   |  ^ consider adding a `main` function to `$DIR/tests/fails/function_with_result.rs`
